<resources>
    <string name="app_name">GatoPardoMoviles2</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="user_login">Email</string>
    <string name="password_login">Password</string>
    <string name="button_login">Login</string>
    <string name="title_activity_register">Registrarse</string>
    <string name="user_register">Username</string>
    <string name="email_register">Email</string>
    <string name="password_register">Password</string>
    <string name="button_register">Register</string>
    <string name="action_sign_in">¿No tienes una cuenta?</string>
    <string name="action_sign_in1">Registrarse</string>
    <string name="action_sign_register">¿Ya tienes una cuenta?</string>
    <string name="action_sign_register1">Iniciar Sesión</string>
    <string name="title_activity_panel">¡Hola Usuario!</string>
    <string name="user_panel">Username</string>
    <string name="email_panel">Email</string>
    <string name="password_panel">Password</string>
    <string name="button_panel">Ir a los talleres</string>
    <string name="title_activity_talleres">Talleres</string>
    <string name="button_talleres">Ir a la web para más información</string>
    <string name="text_talleres">!Separa tu cupo¡</string>

</resources>