<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:gravity="center"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/green"
        app:cardElevation="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_register"
                android:fontFamily="@font/executive"
                android:id="@+id/loginText"
                android:textSize="38sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/blue"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:fontFamily="@font/executive"
                android:hint="@string/user_register"
                android:padding="8dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:fontFamily="@font/executive"
                android:hint="@string/email_register"
                android:padding="8dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@android:color/black"
               />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:fontFamily="@font/executive"
                android:drawablePadding="8dp"
                android:hint="@string/password_register"
                android:padding="8dp"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:backgroundTint="@android:color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/registerButton"
                android:text="@string/button_register"
                android:textSize="18sp"
                android:fontFamily="@font/andbasr"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue"
                android:textStyle="bold"
                app:cornerRadius = "8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/action_sign_register"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:fontFamily="@font/andbasr"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:id="@+id/sigRegisterText"
                android:text="@string/action_sign_register1"
                android:textSize="16sp"
                android:fontFamily="@font/andbasr"
                android:textColor="@color/blue"
                android:layout_gravity="center"  />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>