 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".activity_panel">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/green"
        app:cardElevation="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/executive"
                android:text="@string/title_activity_panel"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/user"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/user"
                android:layout_marginTop="20dp"
                android:layout_gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username1"
                android:fontFamily="@font/executive"
                android:hint="@string/user_panel"
                android:padding="8dp"
                android:textSize="20dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:fontFamily="@font/executive"
                android:hint="@string/email_panel"
                android:textSize="20dp"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:fontFamily="@font/executive"
                android:hint="@string/password_panel"
                android:padding="8dp"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:backgroundTint="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/registerButttonpanel"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/andbasr"
                    android:text="@string/button_panel"
                    android:textColor="@color/blue"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"
                    app:cornerRadius="8dp" />

                <ImageButton
                    android:id="@+id/ibSearch"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baseline_search_24"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
